--- a/index.html
+++ b/index.html
@@ -1,42 +1,17 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="UTF-8">
-  <title> zhouxiaozhuan  </title>
-  <style type="text/css">
-	body{
-	 font-size:30px;
-	 color:rgb(0，0，0);
-	 background-color:rgb(255,255,255);
-	}
-	h1{
-	 border:10px solid blue;
-	 text-align:center;
-	 padding:20px;
-	}
-	p{
-	  border:10px solid yellow;
-      padding:10px;
-	  text-indent:60px;
-	 }
-  </style>
- </head>
- <body>
-	  <h1>
-          熊嘉涛
-	  </h1>
-	    <p>
-		玛卡巴卡
-		</p> 
-		<p>
-		唔西迪西
-		</p>
-		<p>
-		依古比古
-		</p>
-		<p>
-		汤姆布利柏	
-		</p>
- </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>《左边》</h1>
+    <hr>
+    <p><a href="./text_music.html" target="_blank">点击听歌</a></p>
+    <p> <a href="https://github.com/jtxiong/jtxiong.github.io" target="_blank"><img src="./OGC.gif" alt=""></a></p>
+    <p> <a href="https://github.com/jtxiong/jtxiong.github.io" target="_blank"><button type="button" >点击进入代码库!</button></a></p>
+    
+</body>
 </html>
