--- a/index.html
+++ b/index.html
@@ -41,12 +41,43 @@
             font-weight: 700;
             opacity: 0.6;
         }
+	.qm{
+        text-align: center;
+        position: absolute;
+        top: 30%;
+        left: 38%;
+        width: 300px;
+        height: 100px;
+        border-radius: 25px;
+
+        }
+        .qm input{
+            font-family: 楷体;
+            color: rgb(11, 11, 11);
+            background-color: rgb(238, 248, 177);
+            margin: 0 auto;
+            opacity: 0.5;
+            font-size: 50px;
+            width: 300px;
+            height: 100px;
+            border-radius: 25px;
+            border: none;
+
+        }
+        .qm input:hover{
+            color: rgb(255, 255, 255);
+            background-color: rgba(177, 224, 255, 0.5);
+            cursor: pointer;
+        }
 
 
     </style>
   
 </head>
 <body>
+    <div class="qm">
+        <a href="./ks.html"><input type="button" value="期末作业"></a>
+    </div>
     <div class="u4">
         <ul>
             <li><a class="a_color" href="./introduction.html">简介</a></li>
